CSS practice on backgroud colour for body, header & footer.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
 body{
+    background-color: skyblue;
+}
+
+header{
     background-color: salmon;
+}
+
+/* main will not display background colour yellow because the main is not in the code format */
+
+main{
+    background-color: yellow;
+}
+
+footer{
+    background-color: lawngreen;
+}
+
+footer p{
+    background-color: magenta;
 }
